--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-dependencies = [
-]
+dependencies = {file = ["requirements.txt"]}
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
 [project.scripts]
